fix spacing

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -65,7 +65,7 @@ body {
 /* Media Queries */
 
  
-@media (min-width:560px) {
+@media (min-width:300px) {
   .main h1 {
     font-size: 35px;
     letter-spacing: 4px;
